# fits-uv-visualizer

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: input_image_0.fits  input_image_1.fits  input_image_2.fits  input_image_3.fits
lib/: sandboxview.py  uv_computation.py  view.py
tests/: test_uv_computation.py
